[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/office_camera.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 75.25, 226.25 )

[node name="office_camera" type="Camera2D"]
position = Vector2( 480, 270 )
current = true
limit_smoothed = true
editor_draw_limits = true
script = ExtResource( 1 )

[node name="left" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="left"]
position = Vector2( -402.25, -41.25 )
shape = SubResource( 1 )

[node name="right" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="right"]
position = Vector2( 404, -42 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="left" to="." method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="right" to="." method="_on_right_mouse_exited"]
